--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="shortcut icon" href="/src/img/favicon/Group 17.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon/Group 17.png" type="image/x-icon">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
@@ -35,25 +35,25 @@
         <div class="alternativas">
 
             <div id="resposta-A">
-                <img src="/src/img/img-alternativas/Group 18A.png" alt="Alternativa-A">
+                <img src="img/img-alternativas/Group 18A.png" alt="Alternativa-A">
                 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
 
             <div id="resposta-B">
-                <img src="/src/img/img-alternativas/Group 19B.png" alt="Alternativa-B">
+                <img src="img/img-alternativas/Group 19B.png" alt="Alternativa-B">
 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
 
             <div id="resposta-C">
-                <img src="/src/img/img-alternativas/Group 20C.png" alt="Alternativa-C">
+                <img src="img/img-alternativas/Group 20C.png" alt="Alternativa-C">
 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
 
             <div id="resposta-D">
-                <img src="/src/img/img-alternativas/Group 21D.png" alt="Alternativa-D">
+                <img src="img/img-alternativas/Group 21D.png" alt="Alternativa-D">
 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
