--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Quiz</title>
     <link rel="shortcut icon" href="img/favicon/Group 17.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,25 +35,25 @@
         <div class="alternativas">
 
             <div id="resposta-A">
-                <img src="img/img-alternativas/Group 18A.png" alt="Alternativa-A">
+                <img src="./img/img-alternativas/Group 18A.png" alt="Alternativa-A">
                 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
 
             <div id="resposta-B">
-                <img src="img/img-alternativas/Group 19B.png" alt="Alternativa-B">
+                <img src="./img/img-alternativas/Group 19B.png" alt="Alternativa-B">
 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
 
             <div id="resposta-C">
-                <img src="img/img-alternativas/Group 20C.png" alt="Alternativa-C">
+                <img src="./img/img-alternativas/Group 20C.png" alt="Alternativa-C">
 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
 
             <div id="resposta-D">
-                <img src="img/img-alternativas/Group 21D.png" alt="Alternativa-D">
+                <img src="./img/img-alternativas/Group 21D.png" alt="Alternativa-D">
 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
