Finalização do Estilo

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
     
     <!-- Página inicial -->
-    <div id="principal">
+    <div id="principal" class="hide">
         <h1 class="title">Quiz de Física e Química</h1>
         <button class="but">Iniciar</button>
     </div>
 
 
     <!-- Modelo de perguntas -->
-    <div class="hide" id="question">
+    <div class="" id="questions">
 
         <span class="enunciado">
             <p class="number">1.</p>
@@ -60,8 +60,10 @@
 
         </div>
 
+        <button class="avancar">Avançar</button>
+
     </div>
 
-
+<script src="js/script.js"></script>
 </body>
 </html>
