--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
     
     <!-- Página inicial -->
-    <div id="principal" class="hide">
+    <div id="principal">
         <h1 class="title">Quiz de Física e Química</h1>
         <button class="but">Iniciar</button>
     </div>
 
 
     <!-- Modelo de perguntas -->
-    <div class="" id="questions">
+    <div class="hide" id="questions">
 
         <span class="enunciado">
             <p class="number">1.</p>
