--- a/index.html
+++ b/index.html
@@ -34,33 +34,33 @@
 
         <div class="alternativas">
 
-            <div id="resposta-A">
+            <div id="resposta-A" class="resposta">
                 <img src="./img/img-alternativas/Group 18A.png" alt="Alternativa-A">
                 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
 
-            <div id="resposta-B">
+            <div id="resposta-B" class="resposta">
                 <img src="./img/img-alternativas/Group 19B.png" alt="Alternativa-B">
 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
 
-            <div id="resposta-C">
+            <div id="resposta-C" class="resposta">
                 <img src="./img/img-alternativas/Group 20C.png" alt="Alternativa-C">
 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
 
-            <div id="resposta-D">
+            <div id="resposta-D" class="resposta">
                 <img src="./img/img-alternativas/Group 21D.png" alt="Alternativa-D">
 
                 <p class="resp">Lorem, ipsum dolor sit amet</p>
             </div>
 
         </div>
-
-        <button class="avancar">Avançar</button>
+<!-- Botão de avançar e veririficar -->
+        <button class="avancar">verificar</button>
 
     </div>
 
