--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
         </div>
 <!-- Botão de avançar e veririficar -->
-        <button class="avancar">verificar</button>
+        <button id="verificar">Verificar</button>
+        <button id="avancar" class="hide">Avaçar</button>
 
     </div>
 
