--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 <!-- Botão de avançar e veririficar -->
         <button id="verificar">Verificar</button>
-        <button id="avancar" class="hide">Avaçar</button>
+        <button id="avancar" class="hide">Avançar</button>
 
     </div>
 
