Adicionando a pergunta inicial

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <!-- Página inicial -->
     <div id="principal">
-        <h1 class="title">Quiz de Física e Química</h1>
+        <h1 class="title">English Quiz</h1>
         <button class="but">Iniciar</button>
     </div>
 
@@ -29,7 +29,7 @@
 
         <span class="enunciado">
             <p class="number">1.</p>
-            <p class="descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel totam similique tempore iusto maxime minus itaque pariatur blanditiis assumenda, facilis culpa, nisi recusandae maiores aut. Reiciendis, sequi recusandae! Dolore, neque.</p>
+            <p class="descricao">Typically, how many liters of blood does a person have? On average, how many are removed in a blood donation?</p>
         </span>
 
         <div class="alternativas">
@@ -37,25 +37,25 @@
             <div id="resposta-A" class="resposta">
                 <img src="./img/img-alternativas/Group 18A.png" alt="Alternativa-A">
                 
-                <p class="resp">Lorem, ipsum dolor sit amet</p>
+                <p class="resp">It has between 2 and 4 liters. 450 milliliters are removed</p>
             </div>
 
             <div id="resposta-B" class="resposta">
                 <img src="./img/img-alternativas/Group 19B.png" alt="Alternativa-B">
 
-                <p class="resp">Lorem, ipsum dolor sit amet</p>
+                <p class="resp">It has between 4 and 6 liters. 450 milliliters are removed</p>
             </div>
 
             <div id="resposta-C" class="resposta">
                 <img src="./img/img-alternativas/Group 20C.png" alt="Alternativa-C">
 
-                <p class="resp">Lorem, ipsum dolor sit amet</p>
+                <p class="resp">It has 10 liters. 2 liters are removed</p>
             </div>
 
             <div id="resposta-D" class="resposta">
                 <img src="./img/img-alternativas/Group 21D.png" alt="Alternativa-D">
 
-                <p class="resp">Lorem, ipsum dolor sit amet</p>
+                <p class="resp">It has 7 liters. 1.5 liters are removed</p>
             </div>
 
         </div>
