--- a/index.html
+++ b/index.html
@@ -59,9 +59,18 @@
             </div>
 
         </div>
+
 <!-- Botão de avançar e veririficar -->
         <button id="verificar">Verificar</button>
         <button id="avancar" class="hide">Avançar</button>
+
+    </div>
+
+    <!-- Página de finalização -->
+    <div id="pagina-final" class="hide">
+
+        <img class="emote" src="./img/emotes/image-5.png" alt="emote de acertos">
+        <p class="texto-acertos">Acertou 10/10</p>
 
     </div>
 
